<resources>
    <string name="app_name">zhssb</string>
    <string name="str">str %s</string>
    <string name="msg_subscribed">Message subscribed</string>
    <string name="msg_subscribe_failed">Message subscribe failed</string>
    <string name="low_storage_error">error</string>
    <string name="no_camera_permission">No camera permission</string>
    <string name="ok">OK</string>
    <string name="barcode_error_format">error format</string>
    <string name="success">Nice!</string>

<!--    Registration text part-->
    <string name="hint_number">Мобильный телефона</string>
    <string name="hint_doc">ИИН</string>
    <string name="hint_surname">Фамилия</string>
    <string name="hint_name">Имя</string>
    <string name="next">Далее</string>
    <string name="hint_login">Логин</string>
    <string name="hint_password">Пароль</string>
    <string name="signin">Войти</string>
    <string name="signup">Регистрация</string>
    <string name="not_have_acc_label">Если у вас нет аккаунта</string>
<!--    Main page-->
    <string name="balance">Баланс вознограждения :</string>
</resources>
