<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_login"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:paddingTop="8dp"
                    android:shadowColor="@color/colorPrimary"
                    android:singleLine="true"
                    android:textColorHighlight="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:paddingTop="8dp"
                    android:shadowColor="@color/colorPrimary"
                    android:singleLine="true"
                    android:textColorHighlight="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/botton_corner"
                android:text="@string/signin"
                android:textColor="@color/white"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="4dp"
                android:background="@android:color/darker_gray"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:text="@string/not_have_acc_label"
                android:textAlignment="center"/>

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/registration_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/botton_corner"
                android:text="@string/signup"
                android:textColor="@color/white"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Забыли пароль?"
                android:textColor="@color/common_google_signin_btn_text_dark_disabled"/>
    </LinearLayout>


</RelativeLayout>