<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/surname_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_surname"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:paddingTop="8dp"
                    android:shadowColor="@color/colorPrimary"
                    android:singleLine="true"
                    android:textColorHighlight="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_name"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:paddingTop="8dp"
                    android:shadowColor="@color/colorPrimary"
                    android:singleLine="true"
                    android:textColorHighlight="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/doc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/doc_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_doc"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:paddingTop="8dp"
                    android:shadowColor="@color/colorPrimary"
                    android:singleLine="true"
                    android:textColorHighlight="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/number_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_number"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:paddingTop="8dp"
                    android:shadowColor="@color/colorPrimary"
                    android:singleLine="true"
                    android:textColorHighlight="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/botton_corner"
            android:text="@string/next"
            android:textColor="@color/white"/>
</RelativeLayout>